--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Centered Overlay with Typing Title + Button -->
     <div id="overlay" class="center-overlay">
       <h2 id="titleText" class="mb-3"></h2>
-      <button id="playButton" class="btn btn-warning btn-lg" style="display: none;">Not Clickbait</button>
+      <button id="playButton" class="btn btn-primary btn-lg" style="display: none;">Click Me</button>
     </div>
 
     <!-- Responsive Video Container -->
